--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,6 @@
 use_frameworks!
-target 'RYRoutor_Tests' do
-  pod 'RYRoutor', :path => '../'
+target 'RYRouter_Tests' do
+  pod 'RYRouter', :path => '../'
   
   
 end
